--- a/Session1.Rmd
+++ b/Session1.Rmd
@@ -6,13 +6,14 @@ date: "2024-01-26"
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(dplyr)
 ```
 
 # Series On: Data Wrangling and Visualization in R
 
 ## Session 1: Importing Data, Data Wrangling, and Tidy Data
 
-![No data science without data!](images/import.png)
+![**No data science without data!**](images/import.png)
 
 ### Objectives of today's session
 
@@ -36,25 +37,19 @@ knitr::opts_chunk$set(echo = TRUE)
 10. Handling missing data.
 11. **Exercise: ask students to do some basic operations on sample dataset from prev exercise**
 
-Tidy data is **a standard way of mapping the meaning of a dataset to its structure**.
-
-```{r}
-library(dplyr)
-```
-
 ------------------------------------------------------------------------
 
 ## R is a simple calculator
 
 | Operator | Description                 |
 |----------|-----------------------------|
-| \+       | Addition                    |
-| \-       | Subtraction                 |
-| \*       | Multiplication              |
-| /        | Division                    |
-| \^       | Exponentiation (Power)      |
-| %%       | Modulus (Remainder)         |
-| %/%      | Integer Division (Quotient) |
+| **+**    | Addition                    |
+| **-**    | Subtraction                 |
+| **\***   | Multiplication              |
+| **/**    | Division                    |
+| **\^**   | Exponentiation (Power)      |
+| **%%**   | Modulus (Remainder)         |
+| **%/%**  | Integer Division (Quotient) |
 
 ```{r}
 398 + 783
@@ -111,6 +106,8 @@ print(paste("Difference: ", diff_result))
 
 ## Data types
 
+![](images/Data%20Types.png)
+
 ```{r}
 num_variable <- 42.5
 class(num_variable)
@@ -142,6 +139,8 @@ class(num_variable == 42.5)
 
 -   inside (), function take 0 or more arguments
 
+![**Why did the function go to therapy? It had too many issues with its arguments!**](images/r-function.png)
+
 ```{r}
 summ_two_numbers <- function(a=3, b=6){
   return(a+b)
@@ -167,19 +166,33 @@ squared_num <- function(x){
 
 ------------------------------------------------------------------------
 
-# R vectors
+# R Objects
+
+![**Objects Can Contain Multiple Data Types**](images/vectors,%20matrix,%20and%20dataframes.png)
+
+How do we create a vector.
 
 ```{r}
-nums_vector = c(2, 5, 10, 60)
+numeric_vector_1 <- c(1, 2, 3, 4, 5)
 
-nums_vector[3]
-
-nums_vector[2:3]
-
-nums_vector[nums_vector > 9]
+numeric_vector_2 <- 1:5
 ```
 
-[Exercise: create a vector of odd numbers till 10 and return numbers greater than 5]{style="color:coral"}
+Accessing elements of a numeric vector
+
+```{r}
+numeric_vector_1[3] # Access the third element of the vector
+
+numeric_vector_1[2:3] # Access the second to third element of the vector
+
+numeric_vector_1[c(2,5)] # Access the second and fifth element of the vector
+```
+
+Data Frames are important R objects. We will learn how to create a dataframe later in this session.
+
+### [**Exercise:3**]{style="color:coral"}
+
+[1. Create a vector of odd numbers till 10 and access numbers greater than 5]{style="color:coral;"}
 
 ```{r}
 # Your code here
@@ -188,9 +201,9 @@ nums_vector[nums_vector > 9]
 
 ## Read data
 
-Need help looking at the many arguments of read.table you can define? It's easy.
+Need help looking at the many arguments of `read.table` you can use? It's easy.
 
-Type this on the cosole: `?read.table`
+**Type this on the console:** `?read.table`
 
 Don't know what your file looks like? No issue. We can check by reading the file line by line. This works even when the file size in GBs and we don't have a software to open the file on our operating system.
 
@@ -202,7 +215,7 @@ file_path1 <- "Datasets/file_1_to_read.txt"
 readLines(file_path1, n = 5)
 ```
 
-*Note: You can not create an R dataframe and perform data analysis by reading a file line by line.*
+*Note: You can not create a R dataframe and perform data analysis by reading a file line by line.*
 
 ```{r}
 df1 = read.table(file_path1, sep="\t", header = TRUE)
@@ -212,9 +225,11 @@ To check if your data was properly read
 
 ```{r}
 df1
+
+head(df1) # Another way to check a long table (Prints top 6 rows)
 ```
 
-### [**Exercise 3**]{style="color:coral"}
+### [**Exercise 4**]{style="color:coral"}
 
 ```{r}
 # Specify the path to your file
@@ -223,9 +238,9 @@ file_path2 <- "Datasets/file_2_to_read.txt"
 
 [1. Try figuring out what are the best arguments to read the second file]{style="color:coral;"}
 
-```{r}
+```{r eval=FALSE, include=TRUE}
 # Hint: Read the first few lines
-
+readLines(,)
 ```
 
 [2. Now use read.table function to create the df2]{style="color:coral;"}
@@ -259,33 +274,52 @@ read_xlsx("Datasets/file_4_to_read.xlsx", sheet = 'Sheet1')
 
 # Split cells with `tidyr` package
 
-[Exercise: load `tidyr` package]{style="color:red"}
+**Tidy data** is a standard way of **mapping** the **meaning** of a dataset to its **structure**.
+
+![What's a tidy data](images/tidy.png)
+
+![](images/tidy2.png)
+
+### [**Exercise 5**]{style="color:coral"}
+
+[1. load `tidyr` package]{style="color:coral"}
+
+```{r eval=FALSE, include=TRUE}
+# Complete the following code
+
+library(_ _ _)
+
+```
+
+[2. load `dplyr` package]{style="color:coral"}
 
 ```{r}
-#Your Code Here
+# Write the line to load dplyr package
+
 ```
 
 ```{r}
 # Let's create sample dataframe and look at some tidyr functions to merge and split data
 
 splicing_data <- data.frame(
-  Event_ID = c('ENSG171863_RI', 
-               'ENSG168356_SE', 
-               'ENSG160185_SE', 
-               'ENSG243960_A5',
-               'ENSG197291_A3'),
+  Event_ID = c('ENSG1_AB', 
+               'ENSG2_CD', 
+               'ENSG3_EF', 
+               'ENSG4_GH',
+               'ENSG5_IJ'),
   PSI_value_1 = as.character(c('0.', '0.', '0.', '0.', '1.')),
   PSI_value_2 = as.character(c(1,2,3,4,0)),
   Group = c("A", "B", "B", "A", "A"), 
-  Some_Attribute = c('NA', 5, "NA", 9, 'NA')
+  Peak = c('NA', 5, "NA", 9, 'NA')
 )
 
 splicing_data
 ```
 
 ```{r}
-new_splicing_data = tidyr::unite(splicing_data, PSI_value_1, PSI_value_2, col="PSI_value", sep="", remove=TRUE)
-new_splicing_data
+tidy_splicing_data <- tidyr::unite(splicing_data, PSI_value_1, PSI_value_2, col="PSI_value", sep="", remove=TRUE)
+
+tidy_splicing_data
 
 # return new dataframe with new defined column
 # also we can remove old columns or retain them
@@ -294,12 +328,14 @@ new_splicing_data
 
 ```{r}
 # tidyr::separate same as tidyr::separate_wider_delim
-tidyr::separate(splicing_data, Event_ID, sep="_", into=c('ID', 'Splicing event'), remove=TRUE)
+tidyr::separate(tidy_splicing_data, Event_ID, sep="_", into=c('ID', 'Splicing event'), remove=TRUE)
 ```
 
-[Exercise: work with another dataset, unite and separate this dataset]{style="color:red"}
+### [**Exercise 6**]{style="color:coral"}
 
-1.  Import the data into R.
+[Work with another dataset]{style="color:coral"}.
+
+[1. Import the data into R.]{style="color:coral"}.
 
 *Hint: Its a Tab Separated file*
 
@@ -309,7 +345,7 @@ path <- "Datasets/gff_file.txt"
 df3 <- read.table(path, )
 ```
 
-2.  Select column `c(1,3,4,5, and 9)`
+[2. Select column `c(1,3,4,5, and 9)`]{style="color:coral"}.
 
 *Hint: Check Base R cheat sheet*
 
@@ -317,7 +353,7 @@ df3 <- read.table(path, )
 # Your the code here
 ```
 
-2.  Separate column 9 by `sep=";"` and remove the last two columns
+[3. Separate column 9 by `sep=";"` and remove the last two columns]{style="color:coral"}.
 
 *Hint: Its the same as selecting the first 5 columns*
 
@@ -328,14 +364,16 @@ tidyr::select(df3, )
 
 # Reshape data
 
+![pivot_longer and pivot_wider](images/pivot_longer_new.png)
 
 ```{r}
 # First of all, let's create sample dataframe and then reshape it
+
 table2 <- data.frame(
-  country = c('A', 'A', 'A', 'A', 'B', 'B', 'B', 'B', 'C', 'C', 'C', 'C'),
-  year = c(1999, 1999, 2000, 2000, 1999, 1999, 2000, 2000, 1999, 1999, 2000, 2000),
-  type = c('cases', 'pop', 'cases', 'pop', 'cases', 'pop', 'cases', 'pop', 'cases', 'pop', 'cases', 'pop'),
-  count = c('0.7K', '19M', '2K', '20M', '37K', '172M', '80K', '174M', '212K', '1T', '213K', '1T')
+  country = c("A", "A", "B", "B", "C", "C"),
+  year = c(1999, 2000, 1999, 2000, 1999, 2000),
+  cases = c("0.7K", "2K", "37K", "80K", "212K", "213K"),
+  pop = c("19M", "20M", "172M", "174M", "1T", "1T")
 )
 
 table2
@@ -343,59 +381,96 @@ table2
 
 ```{r}
 # Let's reshape it
-tidyr::pivot_wider(table2, names_from = type, values_from = count)
+tidyr::pivot_longer(table2, cols = c("cases","pop"), names_to = "type", values_to = "count")
 ```
 
-[**I think we don't need exercise here**]{style="color:red"}
+# Dplyr Package
 
-# Dplyr package
-
--   *Select* certain columns of data.
-
--   *Filter* your data to select specific rows.
-
--   *Arrange* the rows of your data into an order.
-
--   *Mutate* your data frame to contain new columns.
-
--   *Summarise* chunks of you data in some way.
+| dplyr Verb  | What it Does                                     |
+|-------------|--------------------------------------------------|
+| `filter`    | Retrieve rows based on specified values.         |
+| `select`    | Retrieve columns based on specified names.       |
+| `mutate`    | Add new variables to the data frame.             |
+| `arrange`   | Change the order of the rows based on variables. |
+| `summarize` | Compute summary statistics for the data.         |
 
 Let’s look at how those work.
 
-# joining, transforming and summarizing
+```{r}
+table2
+```
+
+In our table the cases is a character data type. To perform any mathematical operations or comparisons. We must mutate this into an appropriate double.
+
+```{r}
+table3 <- mutate(table2, cases = as.double(sub("K", "", cases))*1000)
+
+table3
+```
+
+Now we can use filter to look for countries that have more than 3000 cases in 1999.
+
+```{r}
+filter(table3, cases > 3000 & year == 1999)
+```
+
+### [**Exercise 7**]{style="color:coral"}
+
+[1. Filter all the rows from year 2000 from `table3`]{style="color:coral"}
+
+```{r eval=FALSE, include=TRUE}
+# complete the code
+- - - (table3, _ _ _)
+```
+
+```{r}
+select(table3, country, year, cases)
+```
+
+```{r}
+arrange(table3, year)
+```
+
+# Joining, Transforming and Summarizing
 
 ### Return back to our splicing data, and join it to another dataframe with new Attribute2, but new dataframe has information only for 4 Events
 
 What to do??? ---\> left and right joins
 
 ```{r}
-new_splicing_data$PSI_value = as.numeric(new_splicing_data$PSI_value)
+
+new_splicing_data <- mutate(tidy_splicing_data, PSI_value = as.numeric(PSI_value))
+
 new_splicing_data
+
 ```
 
 ```{r}
-tmp_df = data.frame(
-  Event_ID = c('ENSG171863_RI', 'ENSG168356_SE', 'ENSG160185_SE', 'ENSG243960_A5'),
-  Attribute2 = c(43, 54, 72, 26))
-tmp_df
+splicing_data_count = data.frame(
+  Event_ID = c('ENSG1_AB', 'ENSG2_CD', 'ENSG3_EF', 'ENSG4_GH'),
+  count = c(43, 54, 72, 26))
+splicing_data_count
 ```
 
 ### dplyr::left_join
 
+![](images/join-outer.png){width="302"}
+
 ```{r}
-dplyr::left_join(new_splicing_data, tmp_df, by="Event_ID")
+dplyr::left_join(new_splicing_data, splicing_data_count, by="Event_ID")
 ```
 
 ### dplyr::right_join
 
 ```{r}
-dplyr::right_join(new_splicing_data, tmp_df, by="Event_ID")
+dplyr::right_join(new_splicing_data, splicing_data_count, by="Event_ID")
 ```
 
-### dplyr::select
+## Revolutionize coding in R with the pipe function `%>%`
+
+![](images/pipe.png)
 
 ```{r}
-# Select needed columns 
 new_splicing_data %>% select(Event_ID)
 ```
 
@@ -422,19 +497,6 @@ new_splicing_data %>%
   )
 ```
 
-[**Exercise: for below splicing data**]{style="color:red"}
-
-[1. **Select Events with PSI_value below 0.5**]{style="color:red"}
-
-[2. **For found Events, find sum and mean values for each groups where these Events are**]{style="color:red"}
-
-```{r}
-new_splicing_data
-
-# Your code here
-# ...
-```
-
 # Write data
 
 ```{r}
@@ -443,15 +505,19 @@ write.csv(new_splicing_data, 'new_splicing_data.csv')
 # readr::write_excel_csv()
 ```
 
-## Revolutionize coding in R with the pipe function `%>%`
-```{r ,eval=FALSE}
-library(dplyr)
-```
+### [**Exercise for Self Learning**]{style="color:coral"}
 
+[1. For the `new_splicing_data`, select Events with PSI_value below 0.5]{style="color:coral"}
 
-```{r eval=FALSE, include=FALSE}
-read.table(path, sep="\t") %>%
-  dplyr::select(c(1:5,9)) %>%
-  tidyr::separate(6,sep=";",into = c("Gene","X","Y")) %>%
-  dplyr::select(c(1:6))
+[**Exercise: for below splicing data**]{style="color:coral"}
+
+[1. **Select Events with PSI_value below 0.5**]{style="color:coral"}
+
+[2. **For found Events, find sum and mean values for each groups where these Events are**]{style="color:coral"}
+
+```{r}
+new_splicing_data
+
+# Your code here
+# ...
 ```
